--- a/css/task.css
+++ b/css/task.css
@@ -11,6 +11,15 @@ body{
      font-style: birthstone bounce;
      font-family: 'Nova Square', sans-serif;
      font-size: 5rem;
+     animation: header;
+     position: relative;
+     animation-duration: 2s;
+     animation-fill-mode: forwards;
+    }
+    
+    @keyframes header {
+        0% {top: -500px;}
+        100% {top: 0px;}
     }
  
  .pic-frame {
@@ -23,8 +32,17 @@ body{
             height: 300px; 
             border: 5px solid black; 
             border-radius: 50%; 
+            animation: pic;
+            position: relative;
+            animation-duration: 2s;
+            animation-fill-mode: forwards;
             
         
+        }
+        @keyframes pic {
+            0% {left: -500px;}
+            100% {left: 0px}
+            
         }
     
 .ingredients{
@@ -32,7 +50,17 @@ body{
  width: 10%;
  margin: 0 auto;
  padding-top: 20px;
- color: rgb(53, 38, 107)
+ color: rgb(53, 38, 107);
+ position: relative;
+ animation: ingr;
+ animation-duration: 2s;
+ animation-fill-mode: forwards;
+}
+
+@keyframes ingr {
+    0%{right: -500px;}
+    100%{right: 0px;}
+    
 }
 
 .ingredients-table{
@@ -40,6 +68,10 @@ body{
     margin: 0 auto;
     font-size: 40px;
     color: rebeccapurple
+    position: relative;
+    animation: bottom;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
    }    
 
 .instructions{
@@ -48,13 +80,27 @@ body{
     width: 50%;
     font-size: 40px;
     color: rebeccapurple
+    position: relative;
+    animation: bottom;
+    animation-duration: 1s;
+    animation-fill-mode: forwards;
 
+}
+
+@keyframes bottom {
+    0% {opacity: 0;} /*0 - 1*/
+    100% {opacity: 1;}
+    
 }
 
 .instructions ol{
     margin: 0 auto;
     width: 0 auto;
     border: 3px solid blue;
+    position: relative;
+    animation: bottom;
+    animation-duration: 2s;
+    animation-fill-mode: forwards;
 
 }
 
@@ -67,8 +113,41 @@ body{
     margin: 0 auto
 }
 
-
+.nyancat{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+}  
+  .nyan-cat {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 100px;
+    height: auto;
+    background-size: contain;
+    animation: nyan-cat 10s linear infinite;
+  }
+  
+  .rainbow {
+    position: relative;
+    bottom: 0;
+    left: 0;
+    width: 10%;
+    height: 50px;
+    background: linear-gradient(to right, violet, indigo, blue, green, yellow, orange, red);
+    background-size: 150% 100%; 
+    animation: nyan-cat 10s linear infinite;
+    transform: translate(-200px, -100px);
+  }
+  
+  @keyframes nyan-cat {
+    0% {left: 0;}
+    100% {left: calc(100% - 100px);}
+  }
+  
 .footer{
+    position: relative;
     text-align: center;
     font-family: 'Lobster', sans-serif;
     font-size: 2rem;
